--- a/problems/0203.移除链表元素.md
+++ b/problems/0203.移除链表元素.md
@@ -569,6 +569,72 @@ class Solution {
     }
 }
 ```
+C#
+```C#
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     public int val;
+ *     public ListNode next;
+ *     public ListNode(int val=0, ListNode next=null) {
+ *         this.val = val;
+ *         this.next = next;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode RemoveElements(ListNode head, int val) {
+        ListNode cur=head;
+        while(cur!=null)
+        {
+            if(cur.next!=null&&cur.next.val==val)
+            {
+                cur.next=cur.next.next;
+            }
+            else
+            {
+                if(cur.val==val)
+                {
+                    head=cur.next;
+                }
+                cur=cur.next;
+            }
+        }
+        return head;
+    }
+}
+```
+C#递归法
+```C#
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     public int val;
+ *     public ListNode next;
+ *     public ListNode(int val=0, ListNode next=null) {
+ *         this.val = val;
+ *         this.next = next;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode RemoveElements(ListNode head, int val) {
+        if(head==null)
+        {
+            return null;
+        }
+        else if(head.val==val)
+        {
+            return RemoveElements(head.next, val);
+        }
+        else
+        {
+            head.next=RemoveElements(head.next, val);
+        }
+        return head;
+    }
+}
+```
 <p align="center">
 <a href="https://programmercarl.com/other/kstar.html" target="_blank">
   <img src="../pics/网站星球宣传海报.jpg" width="1000"/>
